--- a/src/layuiadmin/style/table.css
+++ b/src/layuiadmin/style/table.css
@@ -1,4 +1,4 @@
-.table-box .article {
+.main-article .table-box .article {
     position: relative;
     box-sizing: border-box;
     min-width: 800px;
@@ -11,4 +11,12 @@
     padding-left: 7px;
     width: calc(100% - 20px);
     /* border-top: 1px solid #e6e6e6; */
+}
+
+#page-box .layui-box {
+    margin: 0;
+}
+
+.main-article .table-box .article .layui-table-view {
+    margin-bottom: 0;
 }
