add page for template

--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -178,6 +178,7 @@
       <div class="header">模板信息</div>
       <div class="article">
         <table id="payment-template" lay-filter="test"></table>
+        <div id="page-box"></div>
       </div>
     </div>
     <div id="dialong-box" class="dialog-box">
@@ -370,7 +371,6 @@
               , id: 'idTest'
               , height: 470
               , data: tabData
-              , page: true //开启分页
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
                 , { field: 'id', title: 'ID', width: "5%" }
